* Convert question text input to a text area for more input. * Style question text for wrapping. * Fix formatting of let .. in syntax. * Add error handling for empty question text. *

--- a/instructor_admin/static/admin/css/create_quiz.css
+++ b/instructor_admin/static/admin/css/create_quiz.css
@@ -231,6 +231,7 @@ body {
 
 .question_item {
     grid-column: 2;
+    word-wrap: break-word;
 }
 
 .question_menu {
